styles.css
/* 

TODO: Remove absolute positions
TODO: Fix the site

*/

.green {
    color: rgb(133, 205, 50);
}

.yellow {
    color: rgb(245, 211, 19);
}

html {
    scroll-behavior: smooth;
    overflow: visible;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

body {
    background-color: whitesmoke;
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

a {
    text-decoration: none;
}

.leftside {
    position: absolute;
    z-index: -2;
    background: rgb(245, 211, 19);
    background: linear-gradient(140deg, rgba(245, 211, 19, 1) 0%, rgba(133, 205, 50, 1) 100%);
    width: 50%;
    height: 100vh;
}

.leftimg {
    -webkit-user-drag: none;
    position: absolute;
    z-index: -1;
    opacity: 20%;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
}

.goright {
    position: absolute;
    left: 50%;
    margin: 0;
}

.rightside {
    z-index: -3;
    position: absolute;
    display: flex;
    align-items: center;
    background-color: whitesmoke;
    width: 100%;
    height: 100%;
}

.abovetitle {
    margin-left: 10vh;
    margin-bottom: 25vh;
    font-size: 3.5vh;
    font-weight: bolder;
    color: rgb(150, 150, 150);
}

.undertitle {
    font-size: 2vh;
    color: rgb(177, 177, 177);
    margin-top: 30vh;
    margin-left: 10vh;
    width: 49vh;
    line-height: 4vh;
}

.title1 {
    margin-left: 9vh;
    font-size: 16vh;
    font-weight: bolder;
}

.stupid_dots {
    font-size: 16vh;
    position: absolute;
    left: 50%;
    margin-left: 9vh;
    margin-bottom: 50vh;
}

.button {
    color: whitesmoke;
    font-family: "Roboto", sans-serif;
    font-size: 2vh;
    background-color: rgb(133, 205, 50);
    border: 0 rgb(122, 187, 49);
    cursor: pointer;
    border-radius: 0.5vh;
    margin-top: 50vh;
    margin-left: 10vh;
    padding: 0.9vh 4vh;
}

.button:hover {
    background-color: rgb(117, 182, 43);
}

.leftcontainer {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    position: absolute;
    top: 82vh;
    width: 100%;
    /*background-color: red;*/
    height: 15vh;
}

.thick {
    font-weight: bolder;
    font-size: 2.5vh;
}

.thin {
    font-weight: 400;
    font-size: 2vh;
}

.lefttext {
    margin: 1vh;
    color: whitesmoke;
    text-shadow: black 0 0 0.3vh;
}

@media only screen and (max-width: 768px) {
    .leftside {
        opacity: 0;
    }
    .leftimg {
        opacity: 0;
    }
    .goright {
        left: 0;
        margin-left: 1vh;
    }
    .title1 {
        font-size: 12vh;
    }
    .abovetitle {
        margin-left: 2vh;
        font-size: 3vh
    }
    .undertitle {
        font-size: 1.6vh;
        width: 39vh;
    }
    .rightside {
        width: 0;
    }
    .leftside {
        width: 0;
    }
}

